MNT: Re-rendered with conda-build 3.21.4, conda-smithy 3.9.0, and conda-forge-pinning 2021.04.01.09.17.11

--- a/.ci_support/linux_64_python3.8.____cpython.yaml
+++ b/.ci_support/linux_64_python3.8.____cpython.yaml
@@ -18,10 +18,10 @@ giflib:
 - '5.2'
 grpc_cpp:
 - '1.36'
+jpeg:
+- '9'
 libcurl:
 - '7'
-libjpeg_turbo:
-- '2'
 libpng:
 - '1.6'
 libprotobuf:
@@ -29,9 +29,9 @@ libprotobuf:
 openssl:
 - 1.1.1
 pin_run_as_build:
-  libcurl:
+  jpeg:
     max_pin: x
-  libjpeg_turbo:
+  libcurl:
     max_pin: x
   libpng:
     max_pin: x.x
