--- a/.ci_support/linux_64_python3.8.____cpython.yaml
+++ b/.ci_support/linux_64_python3.8.____cpython.yaml
@@ -26,6 +26,8 @@ libpng:
 - '1.6'
 libprotobuf:
 - '3.15'
+numpy:
+- '1.17'
 openssl:
 - 1.1.1
 pin_run_as_build:
@@ -53,5 +55,7 @@ zip_keys:
   - cxx_compiler_version
 - - cdt_name
   - docker_image
+- - python
+  - numpy
 zlib:
 - '1.2'
