--- a/.ci_support/osx_64_python3.8.____cpython.yaml
+++ b/.ci_support/osx_64_python3.8.____cpython.yaml
@@ -28,6 +28,8 @@ libprotobuf:
 - '3.15'
 macos_machine:
 - x86_64-apple-darwin13.4.0
+numpy:
+- '1.17'
 openssl:
 - 1.1.1
 pin_run_as_build:
@@ -53,5 +55,7 @@ target_platform:
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
+- - python
+  - numpy
 zlib:
 - '1.2'
