--- a/.ci_support/osx_arm64_.yaml
+++ b/.ci_support/osx_arm64_.yaml
@@ -26,6 +26,8 @@ libprotobuf:
 - '3.15'
 macos_machine:
 - arm64-apple-darwin20.0.0
+numpy:
+- '1.19'
 openssl:
 - 1.1.1
 pin_run_as_build:
@@ -51,5 +53,7 @@ target_platform:
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
+- - python
+  - numpy
 zlib:
 - '1.2'
