--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,9 +12,9 @@ source:
     - patches/0001-relax-tolerence-in-special_math_test.patch
     - patches/0002-skip-read-only-debugger_cli_common-test.patch
     - patches/0003-relax-precision-in-matrix_log_op_test.patch
-    - patches/loosen-requirements.patch
-    - patches/osx-arm64.patch  # [osx and arm64]
-    - patches/osx-arm64-2.patch  # [osx and arm64]
+    # requires setting GRPCIO_VERSION in build script
+    - patches/0004-loosen-requirements.patch
+    - patches/0005-osx-arm64.patch  # [osx and arm64]
 
 build:
   number: 0
