Add h-vetinari as a maintainer

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @farhantejani @ghego @gilbertfrancois @hajapy @jschueller @njzjz @waitingkuo @xhochy
+* @farhantejani @ghego @gilbertfrancois @h-vetinari @hajapy @jschueller @njzjz @waitingkuo @xhochy
