--- a/.ci_support/linux_64_python3.6.____cpython.yaml
+++ b/.ci_support/linux_64_python3.6.____cpython.yaml
@@ -42,12 +42,16 @@ pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
+  sqlite:
+    max_pin: x
   zlib:
     max_pin: x.x
 python:
 - 3.6.* *_cpython
 snappy:
 - '1'
+sqlite:
+- '3'
 target_platform:
 - linux-64
 zip_keys:
