Keep old libprotobuf pin

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,7 +30,9 @@ requirements:
     # see https://github.com/tensorflow/tensorflow/blob/v{{ version }}/.bazelversion
     - bazel 3.1.0  # [not osx]
     # For osx-arm64 cross-compilation to work, we need bazel>=4.1
-    - bazel        # [osx]
+    - bazel 4.0  # [osx]
+    - grpc-cpp
+    - libprotobuf
     - nasm
     - sed
   host:
