--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "2.4.3" %}
+{% set version = "2.6.0" %}
 
 package:
   name: tensorflow-split
@@ -6,7 +6,7 @@ package:
 
 source:
   url: https://github.com/tensorflow/tensorflow/archive/v{{ version }}.tar.gz
-  sha256: cafd520c753f8755a9eb1262932f685dc722d8658f08373f8ec88d8acd58d7d4
+  sha256: 41b32eeaddcbc02b0583660bcf508469550e4cd0f86b22d2abe72dfebeacde0f
 
   patches:
     - patches/0001-relax-tolerence-in-special_math_test.patch
@@ -14,7 +14,6 @@ source:
     - patches/0003-relax-precision-in-matrix_log_op_test.patch
     # requires setting GRPCIO_VERSION in build script
     - patches/0004-loosen-requirements.patch
-    - patches/0005-osx-arm64.patch  # [osx and arm64]
 
 build:
   number: 0
@@ -27,10 +26,8 @@ requirements:
     - numpy 1.19.*                           # [build_platform != target_platform]
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
-    # see https://github.com/tensorflow/tensorflow/blob/v{{ version }}/.bazelversion
-    - bazel 3.1.0  # [not osx]
-    # For osx-arm64 cross-compilation to work, we need bazel>=4.1
-    - bazel 4.0  # [osx]
+    - bazel
+    - bazel >=4.2.1  # [osx and arm64]
     - grpc-cpp
     - libprotobuf
     - nasm
@@ -67,25 +64,26 @@ requirements:
     - zlib
     # requirements specified by the package itself, see
     # github.com/tensorflow/tensorflow/blob/v{{ version }}/tensorflow/tools/pip_package/setup.py
-    - absl-py >=0.10.0
-    - astunparse >=1.6.3
-    - python-flatbuffers 1.12.*
-    - google-pasta >=0.2
-    - h5py >=2.10
-    - keras-preprocessing >=1.1.2
+    - absl-py >=0.10,<1
+    - astunparse >=1.6.3,<1.7
+    - python-flatbuffers >=1.12,<2
+    - google-pasta >=0.2,<1
+    - h5py >=3.1.0,<3.2
+    - keras-preprocessing >=1.1.2,<1.2
     - numpy 1.19.*
-    - opt_einsum 3.3.0.*
+    - opt_einsum >=3.3,<3.4
     - protobuf >=3.9.2
-    - six 1.15.0.*
-    - termcolor >=1.1.0
-    - typing_extensions 3.7.4.*
-    - wheel >=0.35
-    - wrapt >=1.11.1
+    - six >=1.15,<1.16
+    - termcolor >=1.1,<1.2
+    - typing_extensions >=3.7.4,<3.8
+    - wheel >=0.35,<1
+    - wrapt >=1.12.1,<1.13
     # upstream wants exact pin for gast
-    - gast ==0.3.3
+    - gast ==0.4.0
     # TF-API needs to move in sync
-    - tensorboard >=2.4.0,<2.5
-    - tensorflow-estimator >=2.4.0,<2.5
+    - tensorboard >=2.6,<3
+    # - tensorflow-estimator >=2.6,<3
+    - keras >=2.6,<3
 
 outputs:
   - name: tensorflow-base
@@ -128,47 +126,49 @@ outputs:
         - sqlite
         - zlib
         # requirements specified by the package itself
-        - absl-py >=0.10.0
-        - astunparse >=1.6.3
-        - python-flatbuffers 1.12.*
-        - google-pasta >=0.2
-        - h5py 2.10.*
-        - keras-preprocessing >=1.1.2
-        - numpy 1.19.*
-        - opt_einsum 3.3.0.*
+        - absl-py >=0.10,<1
+        - astunparse >=1.6.3,<1.7
+        - python-flatbuffers >=1.12,<2
+        - google-pasta >=0.2,<1
+        - h5py >=3.1.0,<3.2
+        - keras-preprocessing >=1.1.2,<1.2
+        - numpy >=1.19.2,<1.20
+        - opt_einsum >=3.3,<3.4
         - protobuf >=3.9.2
-        - six 1.15.0.*
-        - termcolor >=1.1.0
-        - typing_extensions 3.7.4.*
-        - wheel >=0.35
-        - wrapt >=1.11.1
+        - six >=1.15,<1.16
+        - termcolor >=1.1,<1.2
+        - typing_extensions >=3.7.4,<3.8
+        - wheel >=0.35,<1
+        - wrapt >=1.12.1,<1.13
         # upstream wants exact pin for gast
-        - gast ==0.3.3
+        - gast ==0.4.0
         # TF-API needs to move in sync
-        - tensorboard >=2.4.0,<2.5
-        - tensorflow-estimator >=2.4.0,<2.5
+        - tensorboard >=2.6,<3
+        # - tensorflow-estimator >=2.6,<3
+        - keras >=2.6,<3
       run:
         - python
-        - absl-py >=0.10.0
-        - astunparse >=1.6.3
-        - python-flatbuffers 1.12.*
-        - google-pasta >=0.2
-        - h5py 2.10.*
-        - keras-preprocessing >=1.1.2
-        - numpy >=1.19
-        - opt_einsum 3.3.0.*
+        - absl-py >=0.10,<1
+        - astunparse >=1.6.3,<1.7
+        - python-flatbuffers >=1.12,<2
+        - google-pasta >=0.2,<1
+        - h5py >=3.1.0,<3.2
+        - keras-preprocessing >=1.1.2,<1.2
+        - numpy >=1.19.2,<1.20
+        - opt_einsum >=3.3,<3.4
         - protobuf >=3.9.2
-        - six 1.15.0.*
-        - termcolor >=1.1.0
-        - typing_extensions 3.7.4.*
-        - wheel >=0.35
-        - wrapt >=1.11.1
-        - grpcio {{ grpc_cpp }}.*
+        - six >=1.15,<1.16
+        - termcolor >=1.1,<1.2
+        - typing_extensions >=3.7.4,<3.8
+        - wheel >=0.35,<1
+        - wrapt >=1.12.1,<1.13
         # upstream wants exact pin for gast
-        - gast ==0.3.3
+        - gast ==0.4.0
         # TF-API needs to move in sync
-        - tensorboard >=2.4.0,<2.5
-        - tensorflow-estimator >=2.4.0,<2.5
+        - tensorboard >=2.6,<3
+        # - tensorflow-estimator >=2.6,<3
+        - keras >=2.6,<3
+        - grpcio {{ grpc_cpp }}.*
     test:
       requires:
         - pip
