--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -5,15 +5,17 @@ package:
   version: {{ version }}
 
 source:
-  url: https://github.com/tensorflow/tensorflow/archive/v{{ version }}.tar.gz
-  sha256: 41b32eeaddcbc02b0583660bcf508469550e4cd0f86b22d2abe72dfebeacde0f
-
-  patches:
-    - patches/0001-relax-tolerence-in-special_math_test.patch
-    - patches/0002-skip-read-only-debugger_cli_common-test.patch
-    - patches/0003-relax-precision-in-matrix_log_op_test.patch
-    # requires setting GRPCIO_VERSION in build script
-    - patches/0004-loosen-requirements.patch
+  - url: https://github.com/tensorflow/tensorflow/archive/v{{ version }}.tar.gz
+    sha256: 41b32eeaddcbc02b0583660bcf508469550e4cd0f86b22d2abe72dfebeacde0f
+    patches:
+      - patches/0001-relax-tolerence-in-special_math_test.patch
+      - patches/0002-skip-read-only-debugger_cli_common-test.patch
+      - patches/0003-relax-precision-in-matrix_log_op_test.patch
+      # requires setting GRPCIO_VERSION in build script
+      - patches/0004-loosen-requirements.patch
+  - url: https://github.com/tensorflow/estimator/archive/refs/tags/v{{ version }}.tar.gz
+    sha256: 947705c60c50da0b4a8ceec1bc058aaf6bf567a7efdcd50d5173ebf6bafcf30f
+    folder: tensorflow-estimator
 
 build:
   number: 0
@@ -82,7 +84,6 @@ requirements:
     - gast ==0.4.0
     # TF-API needs to move in sync
     - tensorboard >=2.6,<3
-    # - tensorflow-estimator >=2.6,<3
     - keras >=2.6,<3
 
 outputs:
@@ -144,7 +145,6 @@ outputs:
         - gast ==0.4.0
         # TF-API needs to move in sync
         - tensorboard >=2.6,<3
-        # - tensorflow-estimator >=2.6,<3
         - keras >=2.6,<3
       run:
         - python
@@ -166,21 +166,46 @@ outputs:
         - gast ==0.4.0
         # TF-API needs to move in sync
         - tensorboard >=2.6,<3
-        # - tensorflow-estimator >=2.6,<3
         - keras >=2.6,<3
         - grpcio {{ grpc_cpp }}.*
     test:
-      requires:
-        - pip
-      imports:
-        - tensorflow
       commands:
-        - pip check
         - tf_upgrade_v2 --help
         - saved_model_cli --help
         - tflite_convert --help     # [not win]
         - toco_from_protos --help   # [not win]
         - toco --help               # [not win]
+
+  - name: tensorflow-estimator
+    script: build_estimator.sh   # [not win]
+    script: build_estimator.bat  # [win]
+    requirements:
+      build:
+        - {{ compiler('c') }}
+        - {{ compiler('cxx') }}
+        - bazel
+      host:
+        - python
+        - pip
+        - setuptools
+        - wheel
+        - {{ pin_subpackage('tensorflow-base', exact=True) }}
+      run:
+        - python >=3.6
+        - absl-py >=0.7.0
+        - astor >=0.6.0
+        - gast >=0.2.0
+        - numpy >=1.19
+        - six >=1.10.0
+        - protobuf >=3.6.1
+        - termcolor >=1.1.0
+        - wrapt >=1.11.1
+    test:
+      requires:
+        - pip
+      commands:
+        - pip check
+
 
   - name: tensorflow
     requirements:
@@ -189,7 +214,15 @@ outputs:
         - {{ pin_subpackage('tensorflow-base', exact=True) }}
       run:
         - python
+        - tensorflow-estimator {{ version }}.*
         - {{ pin_subpackage('tensorflow-base', exact=True) }}
+    test:
+      requires:
+        - pip
+      imports:
+        - tensorflow
+      commands:
+        - pip check
 
   - name: libtensorflow
     script: cp_libtensorflow.sh
