--- a/.ci_support/osx_64_python3.8.____cpython.yaml
+++ b/.ci_support/osx_64_python3.8.____cpython.yaml
@@ -7,7 +7,7 @@ c_compiler:
 c_compiler_version:
 - '11'
 channel_sources:
-- conda-forge,defaults
+- conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
@@ -17,7 +17,7 @@ cxx_compiler_version:
 giflib:
 - '5.2'
 grpc_cpp:
-- '1.37'
+- '1.39'
 icu:
 - '68'
 jpeg:
@@ -27,7 +27,7 @@ libcurl:
 libpng:
 - '1.6'
 libprotobuf:
-- '3.15'
+- '3.16'
 macos_machine:
 - x86_64-apple-darwin13.4.0
 openssl:
@@ -39,8 +39,6 @@ pin_run_as_build:
     max_pin: x
   libpng:
     max_pin: x.x
-  openssl:
-    max_pin: x.x.x
   python:
     min_pin: x.x
     max_pin: x.x
