Add patch for protobuf compatibility

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,6 +14,7 @@ source:
       # requires setting GRPCIO_VERSION in build script
       - patches/0004-loosen-requirements.patch
       - patches/0005-remove_deprecated_use_of_error_message.patch
+      - patches/0006-protobuf_3_18_comaptibility.patch
       - patches/51450-Fix_protobuf_errors_when_using_system_protobuf.patch
   - url: https://github.com/tensorflow/estimator/archive/refs/tags/v{{ version }}.tar.gz
     sha256: 947705c60c50da0b4a8ceec1bc058aaf6bf567a7efdcd50d5173ebf6bafcf30f
