Enable CUDA in recipe
Co-authored-by: Mark Harfouche <mark.harfouche@gmail.com>
Co-authored-by: Ista Zahn <izahn@hbs.edu>

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,6 +30,7 @@ requirements:
     - numpy 1.19.*                           # [build_platform != target_platform]
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
+    - {{ compiler('cuda') }}                 # [cuda_compiler_version != "None"]
     - bazel
     - bazel >=4.2.1  # [osx and arm64]
     - grpc-cpp
@@ -37,7 +38,13 @@ requirements:
     - nasm
     - sed
     - rsync  # [linux]
+    # realpath is not available from the docker image for cuda <= 10.2
+    # so we install coreutils here
+    - coreutils  # [cuda_compiler_version != "None"]
   host:
+    # GPU requirements for CUDA
+    - cudnn      # [cuda_compiler_version != "None"]
+    - nccl       # [cuda_compiler_version != "None"]
     # conda build requirements
     - python
     - pip
@@ -94,6 +101,8 @@ outputs:
     script: build_pkg.sh  # [not win]
     script: build_pkg.bat  # [win]
     build:
+      string: cuda{{ cuda_compiler_version | replace('.', '') }}py{{ CONDA_PY }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [cuda_compiler_version != "None"]
+      string: cpu_py{{ CONDA_PY }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [cuda_compiler_version == "None"]
       entry_points:
         - toco_from_protos = tensorflow.lite.toco.python.toco_from_protos:main
         - tflite_convert = tensorflow.lite.python.tflite_convert:main
@@ -108,7 +117,11 @@ outputs:
       build:
         - {{ compiler('c') }}
         - {{ compiler('cxx') }}
+        - {{ compiler('cuda') }}  # [cuda_compiler_version != "None"]
       host:
+        # GPU reuqirements
+        - cudnn                   # [cuda_compiler_version != "None"]
+        - nccl                    # [cuda_compiler_version != "None"]
         # conda build requirements
         - python
         - pip
@@ -213,6 +226,14 @@ outputs:
 
 
   - name: tensorflow
+    build:
+      string: cuda{{ cuda_compiler_version | replace('.', '') }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [cuda_compiler_version != "None"]
+      string: cpu_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [cuda_compiler_version == "None"]
+
+      # weigh down cpu implementation and give cuda preference
+      track_features:
+        - tensorflow-cpu          # [cuda_compiler_version == "None"]
+
     requirements:
       host:
         - python
@@ -237,11 +258,14 @@ outputs:
     script: cp_libtensorflow.sh
     build:
       skip: true  # [not linux]
+      string: cuda{{ cuda_compiler_version | replace('.', '') }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [cuda_compiler_version != "None"]
+      string: cpu_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [cuda_compiler_version == "None"]
     requirements:
       # build requirements needs to pick up the compiler run_exports
       build:
         - {{ compiler('c') }}
         - {{ compiler('cxx') }}
+        - {{ compiler('cuda') }}  # [cuda_compiler_version != "None"]
       # host requirements to pick up run_exports
       host:
         - giflib
@@ -263,13 +287,15 @@ outputs:
       requires:
         - {{ compiler('c') }}
       commands:
-        - test -f $PREFIX/lib/libtensorflow.so  # [not win]
-        - ./test_libtensorflow.sh               # [not win]
+        - test -f $PREFIX/lib/libtensorflow.so  # [not win and cuda_compiler_version == "None"]
+        - ./test_libtensorflow.sh               # [not win and cuda_compiler_version == "None"]
 
   - name: libtensorflow_cc
     script: cp_libtensorflow_cc.sh
     build:
       skip: true  # [not linux]
+      string: cuda{{ cuda_compiler_version | replace('.', '') }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [cuda_compiler_version != "None"]
+      string: cpu_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [cuda_compiler_version == "None"]
     requirements:
       # build requirements needs to pick up the compiler run_exports
       build:
@@ -295,8 +321,25 @@ outputs:
       requires:
         - {{ compiler('cxx') }}
       commands:
-        - test -f $PREFIX/lib/libtensorflow_cc.so  # [not win]
-        - ./test_libtensorflow_cc.sh               # [not win]
+        - test -f $PREFIX/lib/libtensorflow_cc.so  # [not win and cuda_compiler_version == "None"]
+        - ./test_libtensorflow_cc.sh               # [not win and cuda_compiler_version == "None"]
+
+  # 2021/08/01, hmaarrfk
+  # While this seems like a roundabout way of defining the package name
+  # It helps the linter avoid errors on a package not having tests.
+  {% set tensorflow_cpu_gpu = "tensorflow-cpu" %}   # [cuda_compiler_version == "None"]
+  {% set tensorflow_cpu_gpu = "tensorflow-gpu" %}   # [cuda_compiler_version != "None"]
+  - name: {{ tensorflow_cpu_gpu }}
+    build:
+      string: cuda{{ cuda_compiler_version | replace('.', '') }}py{{ CONDA_PY }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [cuda_compiler_version != "None"]
+      string: cpu_py{{ CONDA_PY }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                                      # [cuda_compiler_version == "None"]
+      detect_binary_files_with_prefix: False
+    requirements:
+      run:
+        - {{ pin_subpackage("tensorflow", exact=True) }}
+    test:
+      imports:
+        - tensorflow
 
 about:
   home: http://tensorflow.org/
@@ -325,3 +368,4 @@ extra:
     - waitingkuo
     - xhochy
     - hmaarrfk
+    - wolfv
