MNT: Re-rendered with conda-build 3.21.4, conda-smithy 3.14.1, and conda-forge-pinning 2021.10.29.07.34.22

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @farhantejani @ghego @gilbertfrancois @h-vetinari @hajapy @jschueller @njzjz @waitingkuo @xhochy @hmaarrfk
+* @farhantejani @ghego @gilbertfrancois @h-vetinari @hajapy @hmaarrfk @jschueller @njzjz @waitingkuo @wolfv @xhochy
