--- a/.ci_support/linux_64_cuda_compiler_version10.2cudnn7python3.7.____cpython.yaml
+++ b/.ci_support/linux_64_cuda_compiler_version10.2cudnn7python3.7.____cpython.yaml
@@ -1,21 +1,25 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '10.9'
-MACOSX_SDK_VERSION:
-- '10.12'
 c_compiler:
-- clang
+- gcc
 c_compiler_version:
-- '11'
+- '7'
+cdt_name:
+- cos6
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
+cuda_compiler:
+- nvcc
 cuda_compiler_version:
-- None
+- '10.2'
+cudnn:
+- '7'
 cxx_compiler:
-- clangxx
+- gxx
 cxx_compiler_version:
-- '11'
+- '7'
+docker_image:
+- quay.io/condaforge/linux-anvil-cuda:10.2
 giflib:
 - '5.2'
 grpc_cpp:
@@ -30,8 +34,8 @@ libpng:
 - '1.6'
 libprotobuf:
 - '3.16'
-macos_machine:
-- x86_64-apple-darwin13.4.0
+nccl:
+- '2'
 openssl:
 - 1.1.1
 pin_run_as_build:
@@ -49,15 +53,19 @@ pin_run_as_build:
   zlib:
     max_pin: x.x
 python:
-- 3.8.* *_cpython
+- 3.7.* *_cpython
 snappy:
 - '1'
 sqlite:
 - '3'
 target_platform:
-- osx-64
+- linux-64
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
+- - cdt_name
+  - cuda_compiler_version
+  - cudnn
+  - docker_image
 zlib:
 - '1.2'
