--- a/.ci_support/linux_64_cuda_compiler_version11.0cudnn8python3.8.____cpython.yaml
+++ b/.ci_support/linux_64_cuda_compiler_version11.0cudnn8python3.8.____cpython.yaml
@@ -1,19 +1,25 @@
 c_compiler:
 - gcc
 c_compiler_version:
-- '9'
+- '7'
 cdt_name:
-- cos6
+- cos7
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
+cuda_compiler:
+- nvcc
+cuda_compiler_version:
+- '11.0'
+cudnn:
+- '8'
 cxx_compiler:
 - gxx
 cxx_compiler_version:
-- '9'
+- '7'
 docker_image:
-- quay.io/condaforge/linux-anvil-comp7
+- quay.io/condaforge/linux-anvil-cuda:11.0
 giflib:
 - '5.2'
 grpc_cpp:
@@ -28,6 +34,8 @@ libpng:
 - '1.6'
 libprotobuf:
 - '3.16'
+nccl:
+- '2'
 openssl:
 - 1.1.1
 pin_run_as_build:
@@ -45,7 +53,7 @@ pin_run_as_build:
   zlib:
     max_pin: x.x
 python:
-- 3.9.* *_cpython
+- 3.8.* *_cpython
 snappy:
 - '1'
 sqlite:
@@ -56,6 +64,8 @@ zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
 - - cdt_name
+  - cuda_compiler_version
+  - cudnn
   - docker_image
 zlib:
 - '1.2'
