--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -199,6 +199,9 @@ outputs:
   - name: tensorflow-estimator
     script: build_estimator.sh   # [not win]
     script: build_estimator.bat  # [win]
+    build:
+      string: cuda{{ cuda_compiler_version | replace('.', '') }}py{{ CONDA_PY }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [cuda_compiler_version != "None"]
+      string: cpu_py{{ CONDA_PY }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [cuda_compiler_version == "None"]
     requirements:
       build:
         - {{ compiler('c') }}
