--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -207,6 +207,10 @@ outputs:
       build:
         - {{ compiler('c') }}
         - {{ compiler('cxx') }}
+        # Keep the cuda compiler here since it helps package solvers
+        # decide on the cuda variant
+        # https://github.com/conda-forge/tensorflow-feedstock/issues/162
+        - {{ compiler('cuda') }}                 # [cuda_compiler_version != "None"]
         - bazel
         - bazel >=4.2.1  # [osx and arm64]
       host:
@@ -239,6 +243,15 @@ outputs:
         - tensorflow-cpu          # [cuda_compiler_version == "None"]
 
     requirements:
+      build:
+        # Keep the other compilers here so as to help solve for the
+        # required version of libc
+        - {{ compiler('c') }}
+        - {{ compiler('cxx') }}
+        # Keep the cuda compiler here since it helps package solvers
+        # decide on the cuda variant
+        # https://github.com/conda-forge/tensorflow-feedstock/issues/162
+        - {{ compiler('cuda') }}  # [cuda_compiler_version != "None"]
       host:
         - python
         # This ensures that a consistent version of openssl is chosen between
@@ -269,6 +282,9 @@ outputs:
       build:
         - {{ compiler('c') }}
         - {{ compiler('cxx') }}
+        # Keep the cuda compiler here since it helps package solvers
+        # decide on the cuda variant
+        # https://github.com/conda-forge/tensorflow-feedstock/issues/162
         - {{ compiler('cuda') }}  # [cuda_compiler_version != "None"]
       # host requirements to pick up run_exports
       host:
@@ -305,6 +321,10 @@ outputs:
       build:
         - {{ compiler('c') }}
         - {{ compiler('cxx') }}
+        # Keep the cuda compiler here since it helps package solvers
+        # decide on the cuda variant
+        # https://github.com/conda-forge/tensorflow-feedstock/issues/162
+        - {{ compiler('cuda') }}  # [cuda_compiler_version != "None"]
       # host requirements to pick up run_exports
       host:
         - giflib
