--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,5 @@
-{% set version = "2.6.0" %}
+{% set version = "2.6.2" %}
+{% set estimator_version = "2.6.0" %}
 
 package:
   name: tensorflow-split
@@ -6,7 +7,7 @@ package:
 
 source:
   - url: https://github.com/tensorflow/tensorflow/archive/v{{ version }}.tar.gz
-    sha256: 41b32eeaddcbc02b0583660bcf508469550e4cd0f86b22d2abe72dfebeacde0f
+    sha256: e68c1d346fc3d529653530ca346b2c62f5b31bd4fcca7ffc9c65bb39ab2f6ed3
     patches:
       - patches/0001-relax-tolerence-in-special_math_test.patch
       - patches/0002-skip-read-only-debugger_cli_common-test.patch
@@ -15,13 +16,14 @@ source:
       - patches/0004-loosen-requirements.patch
       - patches/0005-remove_deprecated_use_of_error_message.patch
       - patches/0006-protobuf_3_18_comaptibility.patch
+      # can be dropped for v>=2.7
       - patches/51450-Fix_protobuf_errors_when_using_system_protobuf.patch
-  - url: https://github.com/tensorflow/estimator/archive/refs/tags/v{{ version }}.tar.gz
+  - url: https://github.com/tensorflow/estimator/archive/refs/tags/v{{ estimator_version }}.tar.gz
     sha256: 947705c60c50da0b4a8ceec1bc058aaf6bf567a7efdcd50d5173ebf6bafcf30f
     folder: tensorflow-estimator
 
 build:
-  number: 3
+  number: 0
   skip: true  # [win]
 
 requirements:
@@ -94,8 +96,8 @@ requirements:
     # upstream wants exact pin for gast
     - gast ==0.4.0
     # TF-API needs to move in sync
-    - tensorboard >=2.6,<3
-    - keras >=2.6,<3
+    - tensorboard >=2.6,<2.7
+    - keras >=2.6,<2.7
 
 outputs:
   - name: tensorflow-base
@@ -161,14 +163,15 @@ outputs:
         # upstream wants exact pin for gast
         - gast ==0.4.0
         # TF-API needs to move in sync
-        - tensorboard >=2.6,<3
-        - keras >=2.6,<3
+        - tensorboard >=2.6,<2.7
+        - keras >=2.6,<2.7
       run:
         - python
         - absl-py >=0.10,<1
         - astunparse >=1.6.3,<1.7
         - python-flatbuffers >=1.12,<2
         - google-pasta >=0.2,<1
+        - grpcio {{ grpc_cpp }}.*
         - h5py >=3.1.0,<3.2
         - keras-preprocessing >=1.1.2,<1.2
         - numpy >=1.19.2,<1.20
@@ -182,9 +185,8 @@ outputs:
         # upstream wants exact pin for gast
         - gast ==0.4.0
         # TF-API needs to move in sync
-        - tensorboard >=2.6,<3
-        - keras >=2.6,<3
-        - grpcio {{ grpc_cpp }}.*
+        - tensorboard >=2.6,<2.7
+        - keras >=2.6,<2.7
     test:
       files:
         - test_tensorflow_base.py
