MNT: Re-rendered with conda-build 3.21.7, conda-smithy 3.15.0, and conda-forge-pinning 2021.12.05.10.31.58

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @farhantejani @ghego @gilbertfrancois @h-vetinari @hajapy @hmaarrfk @jschueller @njzjz @waitingkuo @wolfv @xhochy
+* @farhantejani @ghego @h-vetinari @hajapy @hmaarrfk @jschueller @njzjz @waitingkuo @wolfv @xhochy
