--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -94,7 +94,12 @@ requirements:
     - numpy 1.19.*
     - opt_einsum >=3.3,<3.4
     - protobuf >=3.9.2
-    - six >=1.15,<1.16
+    # 2021/12/05: hmaarrfk
+    # While tensorflow has an upper bound on six
+    # six has been highly backward compatible
+    # We remove the upper bound so that we can be more compatible with
+    # The rest of the conda-forge ecosystem
+    - six >=1.15
     - termcolor >=1.1,<1.2
     - typing_extensions >=3.7.4,<3.8
     - wheel >=0.35,<1
