--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,2 +1,5 @@
+# 2021/12/05 hmaarrfk
+# Tensorflow 2.7.0 requires futimens which is only
+# available on 10.13
 MACOSX_SDK_VERSION:        # [osx and x86_64]
-  - "10.12"                # [osx and x86_64]
+  - "10.13"                # [osx and x86_64]
