--- a/recipe/custom_toolchain/cc_wrapper.sh.template
+++ b/recipe/custom_toolchain/cc_wrapper.sh.template
@@ -105,3 +105,6 @@ for rpath in ${RPATHS}; do
     done
 done
 
+if [[ "${target_plaform}" == "osx-arm64" ]]; then
+  /usr/bin/codesign -s - -f ${OUTPUT}
+fi
