--- a/recipe/custom_toolchain/cc_wrapper.sh.template
+++ b/recipe/custom_toolchain/cc_wrapper.sh.template
@@ -105,6 +105,6 @@ for rpath in ${RPATHS}; do
     done
 done
 
-if [[ "${target_plaform}" == "osx-arm64" ]]; then
+if [[ "${target_platform}" == "osx-arm64" ]]; then
   /usr/bin/codesign -s - -f ${OUTPUT}
 fi
