--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "2.7.0" %}
+{% set version = "2.8.0" %}
 
 package:
   name: tensorflow-split
@@ -6,16 +6,11 @@ package:
 
 source:
   - url: https://github.com/tensorflow/tensorflow/archive/refs/tags/v{{ version }}.tar.gz
-    sha256: bb124905c7fdacd81e7c842b287c169bbf377d29c74c9dacc04f96c9793747bb
+    sha256: 66b953ae7fba61fd78969a2e24e350b26ec116cf2e6a7eb93d02c63939c6f9f7
     patches:
-      - patches/0001-relax-tolerence-in-special_math_test.patch
-      - patches/0002-skip-read-only-debugger_cli_common-test.patch
-      - patches/0003-relax-precision-in-matrix_log_op_test.patch
-      # requires setting GRPCIO_VERSION in build script
-      - patches/0004-loosen-requirements.patch
-      - patches/0005-Replace-deprecated-absl-Status-error_message-call-wi.patch
+      - patches/customize-setup.patch
   - url: https://github.com/tensorflow/estimator/archive/refs/tags/v{{ version }}.tar.gz
-    sha256: e5164e802638d3cf110ecc17912be9d514a9d3354ec48e77200b9403dcc15965
+    sha256: 58a2c3562ca6491c257e9a4d9bd8825667883257edcdb452181efa691c586b17
     folder: tensorflow-estimator
 
 build:
@@ -166,20 +161,19 @@ outputs:
         - numpy
         - opt_einsum >=2.3.2
         - protobuf >=3.9.2
-        - python-flatbuffers >=1.12,<3
+        - python-flatbuffers >=1.12
         - six >=1.12
         - termcolor >=1.1.0
         - typing_extensions >=3.6.6
         - wrapt >=1.11.0
         # TF-API needs to move in sync
-        # XXX: actually, TF 2.7.0 still demands tb 2.6
-        - tensorboard >=2.6,<2.7
-        - keras >=2.7,<2.8
+        - tensorboard >=2.8,<2.9
+        - keras >=2.8,<2.9
       run:
         - python
         - absl-py >=0.4.0
         - astunparse >=1.6.0
-        - gast >=0.2.1,<0.5.0
+        - gast >=0.2.1
         - google-pasta >=0.1.1
         - grpcio {{ grpc_cpp }}.*
         - h5py >=2.9.0
@@ -187,15 +181,14 @@ outputs:
         - {{ pin_compatible('numpy') }}
         - opt_einsum >=2.3.2
         - protobuf >=3.9.2
-        - python-flatbuffers >=1.12,<3
+        - python-flatbuffers >=1.12
         - six >=1.12
         - termcolor >=1.1.0
         - typing_extensions >=3.6.6
         - wrapt >=1.11.0
         # TF-API needs to move in sync
-        # XXX: actually, TF 2.7.0 still demands tb 2.6
-        - tensorboard >=2.6,<2.7
-        - keras >=2.7,<2.8
+        - tensorboard >=2.8,<2.9
+        - keras >=2.8,<2.9
         # avoid that people without GPUs needlessly download ~0.5-1GB
         - __cuda  # [cuda_compiler_version != "None"]
     # TODO: decide on the name of the package
