force grpc_cpp to 1.42

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -3,3 +3,9 @@
 # available on 10.13
 MACOSX_SDK_VERSION:        # [osx and x86_64]
   - "10.13"                # [osx and x86_64]
+
+# 2022/02/06 ngam
+# grpc_cpp 1.43 forces bazel 4.0.0
+# fixed by forcing grpc_cpp back to 1.42 for now
+grpc_cpp:
+  - "1.42"
