--- a/.ci_support/linux_64_c_compiler_version9cuda_compiler_versionNonecudnnundefinedcxx_compiler_version9python3.9.____cpython.yaml
+++ b/.ci_support/linux_64_c_compiler_version9cuda_compiler_versionNonecudnnundefinedcxx_compiler_version9python3.9.____cpython.yaml
@@ -1,21 +1,25 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '10.9'
-MACOSX_SDK_VERSION:
-- '10.13'
 c_compiler:
-- clang
+- gcc
 c_compiler_version:
-- '11'
+- '9'
+cdt_name:
+- cos6
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
+cuda_compiler:
+- nvcc
 cuda_compiler_version:
 - None
+cudnn:
+- undefined
 cxx_compiler:
-- clangxx
+- gxx
 cxx_compiler_version:
-- '11'
+- '9'
+docker_image:
+- quay.io/condaforge/linux-anvil-cos7-x86_64
 giflib:
 - '5.2'
 grpc_cpp:
@@ -30,10 +34,8 @@ libpng:
 - '1.6'
 libprotobuf:
 - '3.19'
-macos_machine:
-- x86_64-apple-darwin13.4.0
-numpy:
-- '1.18'
+nccl:
+- '2'
 openssl:
 - 1.1.1
 pin_run_as_build:
@@ -51,7 +53,7 @@ pin_run_as_build:
   zlib:
     max_pin: x.x
 python:
-- 3.7.* *_cpython
+- 3.9.* *_cpython
 python_impl:
 - cpython
 snappy:
@@ -59,12 +61,15 @@ snappy:
 sqlite:
 - '3'
 target_platform:
-- osx-64
+- linux-64
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
+  - cudnn
+  - cuda_compiler_version
+  - cdt_name
+  - docker_image
 - - python
-  - numpy
   - python_impl
 zlib:
 - '1.2'
