--- a/.ci_support/osx_arm64_python3.8.____cpython.yaml
+++ b/.ci_support/osx_arm64_python3.8.____cpython.yaml
@@ -1,25 +1,19 @@
+MACOSX_DEPLOYMENT_TARGET:
+- '11.0'
 c_compiler:
-- gcc
+- clang
 c_compiler_version:
-- '7'
-cdt_name:
-- cos6
+- '11'
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
-cuda_compiler:
-- nvcc
 cuda_compiler_version:
-- '10.2'
-cudnn:
-- '7'
+- None
 cxx_compiler:
-- gxx
+- clangxx
 cxx_compiler_version:
-- '7'
-docker_image:
-- quay.io/condaforge/linux-anvil-cos7-cuda:10.2
+- '11'
 giflib:
 - '5.2'
 grpc_cpp:
@@ -34,10 +28,8 @@ libpng:
 - '1.6'
 libprotobuf:
 - '3.19'
-nccl:
-- '2'
-numpy:
-- '1.19'
+macos_machine:
+- arm64-apple-darwin20.0.0
 openssl:
 - 1.1.1
 pin_run_as_build:
@@ -55,7 +47,7 @@ pin_run_as_build:
   zlib:
     max_pin: x.x
 python:
-- 3.9.* *_cpython
+- 3.8.* *_cpython
 python_impl:
 - cpython
 snappy:
@@ -63,16 +55,11 @@ snappy:
 sqlite:
 - '3'
 target_platform:
-- linux-64
+- osx-arm64
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
-  - cudnn
-  - cuda_compiler_version
-  - cdt_name
-  - docker_image
 - - python
-  - numpy
   - python_impl
 zlib:
 - '1.2'
