--- a/.ci_support/osx_arm64_python3.9.____cpython.yaml
+++ b/.ci_support/osx_arm64_python3.9.____cpython.yaml
@@ -1,7 +1,5 @@
 MACOSX_DEPLOYMENT_TARGET:
-- '10.9'
-MACOSX_SDK_VERSION:
-- '10.13'
+- '11.0'
 c_compiler:
 - clang
 c_compiler_version:
@@ -31,9 +29,7 @@ libpng:
 libprotobuf:
 - '3.19'
 macos_machine:
-- x86_64-apple-darwin13.4.0
-numpy:
-- '1.18'
+- arm64-apple-darwin20.0.0
 openssl:
 - 1.1.1
 pin_run_as_build:
@@ -51,7 +47,7 @@ pin_run_as_build:
   zlib:
     max_pin: x.x
 python:
-- 3.8.* *_cpython
+- 3.9.* *_cpython
 python_impl:
 - cpython
 snappy:
@@ -59,12 +55,11 @@ snappy:
 sqlite:
 - '3'
 target_platform:
-- osx-64
+- osx-arm64
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
 - - python
-  - numpy
   - python_impl
 zlib:
 - '1.2'
