--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,7 +22,8 @@ requirements:
   build:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
-    - numpy                                  # [build_platform != target_platform]
+    - numpy 1.20.*  # [py<310 and (build_platform != target_platform)]
+    - numpy 1.21.*  # [py>=310 and (build_platform != target_platform)]
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
     - {{ compiler('cuda') }}                 # [cuda_compiler_version != "None"]
@@ -79,22 +80,22 @@ requirements:
     # github.com/tensorflow/tensorflow/blob/v{{ version }}/tensorflow/tools/pip_package/setup.py
     - absl-py >=0.4.0
     - astunparse >=1.6.0
-    - gast >=0.2.1,<0.5.0
+    - gast >=0.2.1
     - google-pasta >=0.1.1
     - h5py >=2.9.0
     - keras-preprocessing >=1.1.1
-    - numpy
+    - numpy 1.20.*  # [py<310]
+    - numpy 1.21.*  # [py>=310]
     - opt_einsum >=2.3.2
     - protobuf >=3.9.2
-    - python-flatbuffers >=1.12,<3
+    - python-flatbuffers >=1.12
     - six >=1.12
     - termcolor >=1.1.0
     - typing_extensions >=3.6.6
     - wrapt >=1.11.0
     # TF-API needs to move in sync
-    # XXX: actually, TF 2.7.0 still demands tb 2.6
-    - tensorboard >=2.6,<2.7
-    - keras >=2.7,<2.8
+    - tensorboard >=2.8,<2.9
+    - keras >=2.8,<2.9
 
 outputs:
   # 2021/12/29: hmaarrfk
@@ -158,7 +159,8 @@ outputs:
         - google-pasta >=0.1.1
         - h5py >=2.9.0
         - keras-preprocessing >=1.1.1
-        - numpy
+        - numpy 1.20.*  # [py<310]
+        - numpy 1.21.*  # [py>=310]
         - opt_einsum >=2.3.2
         - protobuf >=3.9.2
         - python-flatbuffers >=1.12
