fixing patches, etc.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,7 +8,16 @@ source:
   - url: https://github.com/tensorflow/tensorflow/archive/refs/tags/v{{ version }}.tar.gz
     sha256: 66b953ae7fba61fd78969a2e24e350b26ec116cf2e6a7eb93d02c63939c6f9f7
     patches:
-      - patches/customize-setup.patch
+      # commented out patches are unnecessary
+      # left here as to be transparent and clear about changes
+      # after applying old patches to v2.7.0 and then v2.8.0
+      # cherry-picking without skips 
+      # - patches/0001-relax-tolerence-in-special_math_test.patch
+      # - patches/0002-skip-read-only-debugger_cli_common-test.patch
+      # - patches/0003-relax-precision-in-matrix_log_op_test.patch
+      - patches/0004-loosen-requirements.patch
+      # - patches/0005-Replace-deprecated-absl-Status-error_message-call-wi.patch
+
   - url: https://github.com/tensorflow/estimator/archive/refs/tags/v{{ version }}.tar.gz
     sha256: 58a2c3562ca6491c257e9a4d9bd8825667883257edcdb452181efa691c586b17
     folder: tensorflow-estimator
