--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,7 +28,7 @@ requirements:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
     - {{ compiler('cuda') }}                 # [cuda_compiler_version != "None"]
-    - bazel
+    - bazel <5
     - bazel >=4.2.1  # [osx and arm64]
     - grpc-cpp
     - libprotobuf
@@ -249,7 +249,7 @@ outputs:
         # decide on the cuda variant
         # https://github.com/conda-forge/tensorflow-feedstock/issues/162
         - {{ compiler('cuda') }}                 # [cuda_compiler_version != "None"]
-        - bazel
+        - bazel <5
         - bazel >=4.2.1  # [osx and arm64]
       host:
         - python
