--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -62,6 +62,7 @@ requirements:
     # but so far there have been no problems with leaving these
     # unpinned; though some restrictions come in for packages
     # that are also listed as a requirement for the pip_package.
+    - abseil-cpp
     - astor
     - cython
     - dill
@@ -137,6 +138,7 @@ outputs:
         - pip
         - wheel
         # TF_SYSTEM_LIBS
+        - abseil-cpp
         - astor
         - cython
         - dill
