--- a/.ci_support/linux_64_c_compiler_version10cuda_compiler_version11.1cudnn8cxx_compiler_version10python3.7.____cpython.yaml
+++ b/.ci_support/linux_64_c_compiler_version10cuda_compiler_version11.1cudnn8cxx_compiler_version10python3.7.____cpython.yaml
@@ -1,9 +1,11 @@
+abseil_cpp:
+- '20210324.2'
 c_compiler:
 - gcc
 c_compiler_version:
-- '9'
+- '10'
 cdt_name:
-- cos6
+- cos7
 channel_sources:
 - conda-forge
 channel_targets:
@@ -11,15 +13,15 @@ channel_targets:
 cuda_compiler:
 - nvcc
 cuda_compiler_version:
-- None
+- '11.1'
 cudnn:
-- undefined
+- '8'
 cxx_compiler:
 - gxx
 cxx_compiler_version:
-- '9'
+- '10'
 docker_image:
-- quay.io/condaforge/linux-anvil-cos7-x86_64
+- quay.io/condaforge/linux-anvil-cuda:11.1
 giflib:
 - '5.2'
 grpc_cpp:
@@ -53,7 +55,7 @@ pin_run_as_build:
   zlib:
     max_pin: x.x
 python:
-- 3.10.* *_cpython
+- 3.7.* *_cpython
 python_impl:
 - cpython
 snappy:
