--- a/.ci_support/linux_64_c_compiler_version10cuda_compiler_versionNonecudnnundefinedcxx_compiler_version10python3.7.____cpython.yaml
+++ b/.ci_support/linux_64_c_compiler_version10cuda_compiler_versionNonecudnnundefinedcxx_compiler_version10python3.7.____cpython.yaml
@@ -1,7 +1,9 @@
+abseil_cpp:
+- '20210324.2'
 c_compiler:
 - gcc
 c_compiler_version:
-- '9'
+- '10'
 cdt_name:
 - cos6
 channel_sources:
@@ -17,7 +19,7 @@ cudnn:
 cxx_compiler:
 - gxx
 cxx_compiler_version:
-- '9'
+- '10'
 docker_image:
 - quay.io/condaforge/linux-anvil-cos7-x86_64
 giflib:
@@ -53,7 +55,7 @@ pin_run_as_build:
   zlib:
     max_pin: x.x
 python:
-- 3.8.* *_cpython
+- 3.7.* *_cpython
 python_impl:
 - cpython
 snappy:
