--- a/.ci_support/linux_64_c_compiler_version10cuda_compiler_versionNonecudnnundefinedcxx_compiler_version10python3.9.____cpython.yaml
+++ b/.ci_support/linux_64_c_compiler_version10cuda_compiler_versionNonecudnnundefinedcxx_compiler_version10python3.9.____cpython.yaml
@@ -1,9 +1,11 @@
+abseil_cpp:
+- '20210324.2'
 c_compiler:
 - gcc
 c_compiler_version:
-- '9'
+- '10'
 cdt_name:
-- cos7
+- cos6
 channel_sources:
 - conda-forge
 channel_targets:
@@ -11,15 +13,15 @@ channel_targets:
 cuda_compiler:
 - nvcc
 cuda_compiler_version:
-- '11.2'
+- None
 cudnn:
-- '8'
+- undefined
 cxx_compiler:
 - gxx
 cxx_compiler_version:
-- '9'
+- '10'
 docker_image:
-- quay.io/condaforge/linux-anvil-cuda:11.2
+- quay.io/condaforge/linux-anvil-cos7-x86_64
 giflib:
 - '5.2'
 grpc_cpp:
@@ -53,7 +55,7 @@ pin_run_as_build:
   zlib:
     max_pin: x.x
 python:
-- 3.7.* *_cpython
+- 3.9.* *_cpython
 python_impl:
 - cpython
 snappy:
