--- a/.ci_support/linux_64_c_compiler_version9cuda_compiler_versionNonecudnnundefinedcxx_compiler_version9python3.10.____cpython.yaml
+++ b/.ci_support/linux_64_c_compiler_version9cuda_compiler_versionNonecudnnundefinedcxx_compiler_version9python3.10.____cpython.yaml
@@ -3,9 +3,9 @@ abseil_cpp:
 c_compiler:
 - gcc
 c_compiler_version:
-- '10'
+- '9'
 cdt_name:
-- cos7
+- cos6
 channel_sources:
 - conda-forge
 channel_targets:
@@ -13,15 +13,15 @@ channel_targets:
 cuda_compiler:
 - nvcc
 cuda_compiler_version:
-- '11.2'
+- None
 cudnn:
-- '8'
+- undefined
 cxx_compiler:
 - gxx
 cxx_compiler_version:
-- '10'
+- '9'
 docker_image:
-- quay.io/condaforge/linux-anvil-cuda:11.2
+- quay.io/condaforge/linux-anvil-cos7-x86_64
 giflib:
 - '5.2'
 grpc_cpp:
