[ci skip] [skip ci] [cf admin skip] ***NO_CI*** admin migration CondaForgeMasterToMain

--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -3,3 +3,6 @@ build_platform:
 conda_forge_output_validation: true
 provider:
   win: azure
+github:
+  branch_name: main
+  tooling_branch_name: main
